# spy-detector

./: .gitignore  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  DEBUGGING.md  FALSE_POSITIVES.md  LICENSE  NOTICE.md  README.md  SECURITY.md  THREAT_MODEL.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: main.wxs
src-tauri/permissions/: allow-accept-terms.json  allow-add-etw-ignored.json  allow-check-rules-update.json  allow-clear-browser-history-findings.json  allow-clear-dns-cache.json  allow-clear-event-log.json  allow-clear-process-launches.json  allow-clear-thread-events.json  allow-close-browser-safely-cmd.json  allow-count-event-log.json  allow-delete-all-browser-history-findings.json  allow-delete-browser-history-findings.json  allow-export-latest-scan-json.json  allow-export-latest-scan-markdown.json  allow-file-sha256-hex.json  allow-get-app-metadata.json  allow-get-app-settings.json  allow-get-autostart-enabled.json  allow-get-dev-infra-meta.json  allow-get-dns-cache-stats.json  allow-get-ioc-catalog-meta.json  allow-get-language.json  allow-get-latest-findings.json  allow-get-monitoring-tick.json  allow-get-recent-process-launches.json  allow-get-recent-thread-events.json  allow-get-runtime-status.json  allow-get-scan-history.json  allow-get-scan-interval.json  allow-get-terms-accepted-at.json  allow-get-yara-status.json  allow-kill-process.json  allow-list-abusech-sources.json  allow-list-allowlist.json  allow-list-browser-history-findings.json  allow-list-etw-ignored.json  allow-list-event-log.json  allow-list-ioc-entries.json  allow-list-ip-feeds.json  allow-list-network-connections.json  (+31 more)
src-tauri/resources/: dev-infra-iocs.yaml  windows-spy-signatures.yaml
src-tauri/src/: abuse_ch.rs  allowlist.rs  amsi.rs  app_log.rs  authenticode.rs  db.rs  (+41 more)
(+130 files in other folders)
